// Original file: ../protobuf/service/message.proto


export interface MessageUpdateResponse {
  'sender'?: (string);
  'reciever'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (boolean);
  'readStatus'?: (boolean);
}

export interface MessageUpdateResponse__Output {
  'sender'?: (string);
  'reciever'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (boolean);
  'readStatus'?: (boolean);
}
