// Original file: ../protobuf/service/middlware/message.proto


export interface MessageResponse {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'text'?: (string);
  'toPubKey'?: (string);
  'contentType'?: (string);
  'timestamp'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}

export interface MessageResponse__Output {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'text'?: (string);
  'toPubKey'?: (string);
  'contentType'?: (string);
  'timestamp'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}
