// Original file: ../protobuf/service/middlware/message.proto


export interface MessageUpdateRequest {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}

export interface MessageUpdateRequest__Output {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}
