// Original file: ../protobuf/service/middlware/message.proto


export interface MessageUpdateResponse {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}

export interface MessageUpdateResponse__Output {
  'fromPubKey'?: (string);
  'messageId'?: (string);
  'deliverStatus'?: (string);
  'readStatus'?: (string);
}
